# tda

./: .gitignore  .gitmodules  CMakeLists.txt  Stopwatch.cpp  Stopwatch.h  automata.h  main.cpp  regex.cpp  regex.h  text_search.h
dis/: ReutersArticle.cpp  ReutersArticle.h  SgmlFile.cpp  SgmlFile.h  document_clusterer.cpp  document_clusterer.h  porter_stemmer.cpp  porter_stemmer.h  sgml_collection.cpp  sgml_collection.h  term_index.h  text_search.cpp  text_search.h  vector_model.cpp  vector_model.h
